--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,17 +11,14 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: windows-2022
     steps:
     - uses: actions/checkout@v2
     - name: Build Release
       run: cargo build --release
-    - uses: actions/upload-artifact@v2
+    - name: Fetch action
+      id: pl
+      uses: Rishabh510/Path-lister-action@master
       with:
-        name: swsh-event-dumper-${{ matrix.os }}
-        path: |
-          target/release/swsh_event_dumper.*
-          !target/release/*.d
+        path: ".github/"
+        type: ".exe"
