--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Cache Cargo build
         uses: actions/cache@v1
         with:
-          path: target/debug
-          key: ${{ runner.os }}-stable-debug-target-${{ hashFiles('**/Cargo.lock') }}
+          path: target/release
+          key: ${{ runner.os }}-stable-release-target-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-stable-debug-target-
       - name: Install Rust
