--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,53 +1,28 @@
-name: Builds
+name: Rust
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   build:
-    name: Build
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [linux, macos, windows]
-        include:
-          - build: linux
-            os: ubuntu-latest
-            rust: stable
-          - build: macos
-            os: macos-latest
-            rust: stable
-          - build: windows
-            os: windows-2022
-            rust: stable
-
+        os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Cache Cargo registry
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-stable-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-stable-cargo-registry-
-      - name: Cache Cargo index
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-stable-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-stable-cargo-index-
-      - name: Cache Cargo build
-        uses: actions/cache@v1
-        with:
-          path: target/release
-          key: ${{ runner.os }}-stable-release-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-stable-debug-target-
-      - name: Install Rust
-        run: |
-          rustup update ${{ matrix.rust }} --no-self-update 
-          rustup default ${{ matrix.rust }}
-      - name: Build
-        run: cargo build --release
+    - uses: actions/checkout@v2
+    - name: Build Release
+      run: cargo build --release
+    - uses: actions/upload-artifact@v2
+      with:
+        name: swsh-event-dumper-${{ matrix.os }}
+        path: |
+          target/release/swsh_event_dumper.*
+          target/release/swsh_event_dumper.*
+          !target/release/*.d
